# supdog

./: .gitignore  Cargo.toml  Makefile  README.md  package-lock.json  package.json  svelte.config.js
.svelte-kit/: ambient.d.ts  non-ambient.d.ts
.svelte-kit/output/server/: manifest.js
crates/sup/: Cargo.toml
crates/sup-core/: Cargo.toml
crates/sup-core/src/: db.rs  lib.rs  models.rs
crates/sup-core/src/migrations/: 001_initial.sql
crates/sup-core/src/queries/: carryover.rs  daily_notes.rs  links.rs  mod.rs  nodes.rs  search.rs  tags.rs
crates/sup/src/: config.rs  main.rs  output.rs
crates/sup/src/cli/: args.rs
crates/sup/src/commands/: log.rs  mod.rs  search.rs  tasks.rs  today.rs
crates/sup/src/tui/: app.rs  editor.rs  events.rs  journal.rs  mod.rs  search_overlay.rs  tag_editor.rs  tasks_view.rs
docs/plans/: 2026-03-05-sup-design.md  2026-03-05-sup-implementation.md
docs/superpowers/plans/: 2026-03-15-tauri-rewrite.md
docs/superpowers/specs/: 2026-03-15-tauri-rewrite-design.md
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  lib.rs  main.rs  models.rs  quick_capture.rs
src-tauri/src/commands/: blocks.rs  daily_notes.rs  links.rs  mindmaps.rs  mod.rs  search.rs  tags.rs
src-tauri/src/migrations/: 001_initial.sql
src/lib/: api.ts  types.ts
src/lib/components/: BlockEditor.svelte  BlockItem.svelte  BlockTree.svelte  DateNav.svelte  LinkSearch.svelte  MindMapCanvas.svelte  SearchOverlay.svelte  Sidebar.svelte  TagAutocomplete.svelte  TagPageBlocks.svelte  (+3 more)
src/routes/: +layout.svelte  +page.svelte
(+31 files in other folders)
