[package]
name = "sup"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sup"
path = "src/main.rs"

[dependencies]
sup-core = { path = "../sup-core" }
anyhow = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }
